2005-02-02  Chenthill Palanisamy  <pchenthill@novell.com>

	reviewed by Harish Krishnaswamy <kharish@novell.com>

	Fixes #71460
	* itip-formatter.c: (view_response_cb): If the my_address
	is not set. Set it from the backend.

2005-01-27  JP Rosevear  <jpr@novell.com>

	* itip-view.c (format_date_and_time_x): make tomorrow and this
	week strings work properly

2005-01-27  JP Rosevear  <jpr@novell.com>
	
	* itip-formatter.c (find_cal_opened_cb): remove debug test

442005-01-27  JP Rosevear  <jpr@novell.com>

	* itip-formatter.c: add some debugging spew

2005-01-27  Rodrigo Moya <rodrigo@novell.com>

	* itip-formatter.c (update_attendee_status): deal with the itip
	message having an individual instance.

2005-01-26  JP Rosevear  <jpr@novell.com>

	Fixes #71485
	
	* itip-formatter.c (update_attendee_status): fix message paste-o

	* itip-view.c (format_date_and_time_x): improve translator
	comments

2005-01-25  JP Rosevear  <jpr@novell.com>

	* itip-formatter.c (pitip_free): actually destroy the client
	hashes so the signals get cleaned up
	(format_itip): create a proper unique classid for the pobject

2005-01-14  JP Rosevear  <jpr@novell.com>

	* itip-formatter.c (extract_itip_data): use
	camel_data_wrapper_decode_to_stream instead of
	camel_data_wrapper_write_to_stream 
	
2005-01-14  JP Rosevear  <jpr@novell.com>

	* itip-formatter.c (format_itip_object): handle UTC dtstart/dtend
	properly

2005-01-11  JP Rosevear  <jpr@novell.com>

	Fixes #29985
	
	* itip-formatter.c (view_response_cb): set the message flags to
	answered if we send successfully

2005-01-11  Harish Krishnaswamy  <kharish@novell.com>

	* itip-formatter.c (update_item): Fixed a compiler warning. 

2005-01-10  JP Rosevear  <jpr@novell.com>

	* itip-formatter.c (update_item): set to the new items, duh
	
2005-01-10  JP Rosevear  <jpr@novell.com>

	* itip-formatter.c (update_item): compare pointers instead of
	content id

2005-01-10  JP Rosevear  <jpr@novell.com>	
